# distance

./: .gitignore  CLAUDE.md  README.md
agent/: main.py  pyproject.toml
client/: index.html  package-lock.json  package.json
video/: CMakeLists.txt
video/src/: capture.c  capture.cpp  capture.hpp  config.c  config.cpp  config.h  config.hpp  main.c  main.cpp  shared_memory.c  shared_memory.cpp  shared_memory.h  shared_memory.hpp
video/src/capture/: dxgi.cpp  gdi.c  gdi.cpp  macos.h  macos.mm
